--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cordova-ios": "^5.0.1",
     "cordova-plugin-ionic-webview": "^4.1.3",
     "cordova-plugin-splashscreen": "^5.0.3",
-    "cordova-plugin-statusbar": "^2.4.3"
+    "cordova-plugin-statusbar": "^2.4.3",
+    "debug": "4.1.1"
   },
   "devDependencies": {
     "cordova-plugin-whitelist": "^1.3.4"
